# Flame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
flame/: CMakeLists.txt  main.cpp
lib/: libgui.lib
libflameray-opencl/: CMakeLists.txt  flameray.cpp  flameray.h
libgui/: CMakeLists.txt  api.h  mainwindow.cpp  mainwindow.h  res.qrc  viewport.cpp  viewport.h
libgui/res/qts/: menuBar.qts
phoenix/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  viewport.cpp  viewport.h
phoenix/res/qml/: defaultLayout.qml
win/: libflameray-opencl.lib
x11/: phoenix
